[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/eh_jogos_game_jolt_api/editor_uis/GamejoltProjectSettingsTab.gd" type="Script" id=1]

[node name="Gamejolt" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyList" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIdLine" type="HBoxContainer" parent="PropertyList"]
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 25 )

[node name="Label" type="Label" parent="PropertyList/GameIdLine"]
margin_top = 6.0
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Game ID"

[node name="GameIdLineEdit" type="LineEdit" parent="PropertyList/GameIdLine"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "513246"
clear_button_enabled = true

[node name="PrivateKeyLine" type="HBoxContainer" parent="PropertyList"]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 25 )

[node name="Label" type="Label" parent="PropertyList/PrivateKeyLine"]
margin_top = 6.0
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Private Key"

[node name="PrivateKeyLineEdit" type="LineEdit" parent="PropertyList/PrivateKeyLine"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "635bb6bcf9af8253ff9c93516deed4d2"
secret = true
clear_button_enabled = true
[connection signal="visibility_changed" from="." to="." method="_on_GameJoltTab_visibility_changed"]
[connection signal="text_changed" from="PropertyList/GameIdLine/GameIdLineEdit" to="." method="_on_GameIdLineEdit_text_changed"]
[connection signal="text_entered" from="PropertyList/GameIdLine/GameIdLineEdit" to="." method="_on_GameIdLineEdit_text_entered"]
[connection signal="text_changed" from="PropertyList/PrivateKeyLine/PrivateKeyLineEdit" to="." method="_on_PrivateKeyLineEdit_text_changed"]
[connection signal="text_entered" from="PropertyList/PrivateKeyLine/PrivateKeyLineEdit" to="." method="_on_PrivateKeyLineEdit_text_entered"]
